2004-06-30  James E Wilson  <wilson@specifixinc.com>

	* gas/ia64/dv-imply.d: Update.
	* gas/ia64/dv-mutex.d: Likewise.
	* gas/ia64/dv-safe.d: Likewise.

2004-06-29  Alan Modra  <amodra@bigpond.net.au>

	* gas/m68k/mode5.s: Pad section.
	* gas/m68k/mode5.d: Update.

2004-06-28  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/power4.d: Update.

2004-06-24  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/prescott.s: Remove fisttpd and fisttpq.
	* gas/i386/prescott.d: Update.

2004-06-08  Jakub Jelinek  <jakub@redhat.com>

	* gas/ia64/dv-raw-err.s: Add some new postinc tests.
	* gas/ia64/dv-raw-err.l: Updated.

2004-05-28  Peter Barada <peter@the-baradas.com>

	* gas/m68k/mode5.s: New test file.  Checks conversion of mode 5
	addressing with zero offset into mode 2 addressing.
	* gas/m68k/mode5.d: New file: Expected disassmbly.
	* gas/m68k/all.exp: Run new test.

2004-05-27  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/regs.d: Updated.

2004-05-26  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/ia64.exp: Run invalid-ar.
	
	* gas/ia64/invalid-ar.l: New file. Test invalid AR access.
	* gas/ia64/invalid-ar.s: Likewise.

2004-05-24  Peter Barada  <peter@the-baradas.com>

	* gas/m68k/mcf-emac.d: Provide correct disassembler results.
	* gas/m68k/mcf-mac.d: Provide correct disassembler results.

2004-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/dv-srlz.d: Fix a typo.

2004-05-12  Ben Elliston  <bje@au.ibm.com>

	* gas/h8300/t03_add.exp: Remove stray semicolons.
	* gas/h8300/t04_sub.exp: Likewise.
	* gas/h8300/t05_cmp.exp: Likewise.
	* gas/h8300/t08_or.exp: Likewise.
	* gas/h8300/t09_xor.exp: Likewise.
	* gas/h8300/t10_and.exp: Likewise.
	* gas/hppa/reloc/reloc.exp: Likewise.
	* gas/hppa/unsorted/unsorted.exp: Likewise.
	* gas/i386/i386.exp: Likewise.
	* gas/m68hc11/m68hc11.exp: Likewise.
	* gas/mips/mips.exp: Likewise.
	* gas/sparc/sparc.exp: Likewise.
	* lib/gas-defs.exp: Likewise.

2004-05-11  Nick Clifton  <nickc@redhat.com>
