@@ -1,0 +1,10 @@
+	.section	.text,"axG",@progbits,._foo,comdat
+	.proc _foo#
+_foo:
+	(p6) br.cond.dptk .L37
+.L48:
+.L70:
+.L37:
+.L77:
+.L74:
+	.endp _foo#
