@@ -56,5 +56,6 @@ if [istarget "ia64-*"] then {
 	run_dump_test "secname"
 	run_dump_test "unwind"
 	run_dump_test "alias"
+	run_dump_test "group-1"
     }
 }
